--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,15 +15,16 @@ h1 {
 }
 
 .class-info {
-    align: center;
+    align: center;output/
 }
 
+.test-div,
 .input-files-div {
-  width: 100%;
   padding: 1em 3em 2em 2em;
   margin: 0.5em;
   border-radius: 4em;
 
+  opacity: 0.8
   color: whitesmoke;
   background-color: #E5A227;
   align: left;
@@ -43,4 +44,16 @@ h1 {
   opacity: 0.9;
   width: 10em;
   color: black;
+}
+
+#incorrect-div {
+    background-color: #E5A227;;
+}
+
+#correct-div {
+    background-color: green;
+}
+
+p {
+    white-space: pre-wrap;
 }
